--- a/index.html
+++ b/index.html
@@ -18,12 +18,46 @@
 
     <!-- Estilo customizado -->
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="icon" href="imagens/favicon.png"> <!--icone que fica no título da aba-->
 
     <title>Música para todos - Spotify</title>
   </head>
   <body>
     
-    <h1>Olá, mundo!</h1>
+    <header> <!--inicio cabecalho-->
+      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
+        <div class="container">
+          <a href="index.html" class="navbar-brand">
+            <img src="imagens/spotify.svg" width="142">
+          </a>
+
+          <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+            <i class="fas fa-bars text-white"></i>
+          </button>
+
+          <div class="collapse navbar-collapse" id="nav-principal">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="" class="nav-link">Premium</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Ajuda</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Baixar</a>
+              </li>
+              <li class="nav-item divisor"></li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Inscrever-se</a>
+              </li>
+              <li class="nav-item">
+                <a href="" class="nav-link">Entrar</a>
+              </li>
+            </ul>
+          </div>
+        </div>  
+      </nav>
+    </header> <!--fim cabecalho-->
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
